2002-10-10  Mike Kestner <mkestner@speakeasy.net>

	* generator/CallbackGen.cs : some fixes
	* generator/Parameters.cs (CreateSignature): handle void params

2002-10-10  Miguel de Icaza  <miguel@ximian.com>

	* gtk/ThreadNotify.cs: Avoid multiple notifications.

2002-10-09  Miguel de Icaza  <miguel@ximian.com>

	* glue/adjustment.c (gtksharp_gtk_adjustment_get_page_size): Added
	the glue.

	* gtk/Adjustment.custom: Added some more methods

2002-10-08  Kristian Rietveld  <kris@gtk.org>

	(So Miguel told me just to go ahead and commit -kris)

	* gtk/TreeSelection.custom: new file, defines a working
	GetSelected method (GetSelected is a bit tricky function).

	* generator/InterfaceGen.cs (Generate): also call AppendCustom

	* sources/Gtk.metadata: hide the autogenerated
	Gtk.TreeSelection.GetSelected method.

2002-10-08  Miguel de Icaza  <miguel@ximian.com>

	* gdk/Point.custom: Use (x,y) instead.
	
	* gdk/Color.custom: Use the X rgb color format specification.

	* gdk/Rectangle.custom: Use the X geometry format for Rectangles.

2002-10-07  Vladimir Vukicevic  <vladimir@pobox.com>

	* glue/style.c, gtk/Style.custom: handle
	getting GC's and colors correctly -- it's not possible
	to marshal arrays from C-land to mono correctly,
	so indexed accessors have to be used.

2002-10-08  Duncan Mak  <duncan@ximian.com>

	* gdk/Color.custom:
	* gdk/DeviceAxis.custom:
	* gdk/Point.custom:
	* gdk/Rectangle.custom: Committed ToString patches contributed by
	Jasper van Putten <Jaspervp@gmx.net>

2002-10-05  Vladimir Vukicevic  <vladimir@pobox.com>

	* glib/GException.cs: g_clear_error takes
	a GError **, not a GError *.  Added refs to get the **.

2002-10-04  Vladimir Vukicevic  <vladimir@pobox.com>

	* glib/ObjectManager.cs, glue/type.c: If there isn't
	an exact match for a C GObject class (i.e. BluecurveStyle),
	walk up the gobject type hierarchy until we find a type
	that we do have a wrapper for, and return that.  This means