@@ -1,3 +1,7 @@
+2002-10-11  Martin Baulig  <martin@gnome.org>
+
+	* glib/FileUtils.cs: New file.  Wrapped g_file_get_contents() here.
+
 2002-10-10  Mike Kestner <mkestner@speakeasy.net>
 
 	* generator/CallbackGen.cs : some fixes
